# verilog-playground

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  main.cpp
.zed/: settings.json  tasks.json
sim/: CMakeLists.txt  main.cpp  runner.h
sim/runners/: test_pattern_runner.cpp
verilog/: video_sync.sv  video_sync.v  video_sync_generator.v  video_sync_tb.sv  video_test_pattern.v
verilog/tests/: video_sync_tb.sv
